uselon arrayvelonc::ArrayVelonc;
uselon itelonrtools::Itelonrtools;
uselon log::info;
uselon std::sync::Arc;
uselon tokio::sync::onelonshot::Selonndelonr;
uselon tokio::timelon::Instant;

uselon cratelon::bootstrap::{TelonnsorInput, TelonnsorInputelonnum};
uselon cratelon::cli_args::{ARGS, MODelonL_SPelonCS};
uselon cratelon::{Callback, MAX_NUM_INPUTS, PrelondictRelonsult};
uselon cratelon::melontrics::{
    BATCH_SIZelon, BATCH_SIZelon_BY_MODelonL, BLOCKING_RelonQUelonST_NUM, MODelonL_INFelonRelonNCelon_TIMelon_COLLelonCTOR,
    NUM_BATCH_PRelonDICTION, NUM_BATCH_PRelonDICTION_BY_MODelonL, NUM_BATCHelonS_DROPPelonD,
    NUM_BATCHelonS_DROPPelonD_BY_MODelonL, NUM_PRelonDICTION_BY_MODelonL, NUM_RelonQUelonSTS_DROPPelonD,
    NUM_RelonQUelonSTS_DROPPelonD_BY_MODelonL,
};
uselon cratelon::prelondict_selonrvicelon::Modelonl;
uselon cratelon::tf_proto::telonnsorflow_selonrving::modelonl_spelonc::VelonrsionChoicelon;
uselon cratelon::tf_proto::telonnsorflow_selonrving::PrelondictRelonquelonst;
uselon cratelon::tf_proto::DataTypelon;

#[delonrivelon(Delonbug)]
pub struct BatchPrelondictor<T: Modelonl> {
    pub modelonl: Arc<T>,
    pub input_telonnsors: Velonc<Velonc<TelonnsorInput>>,
    pub callbacks: Velonc<Callback>,
    pub cur_batch_sizelon: usizelon,
    pub max_batch_sizelon: usizelon,
    pub batch_timelon_out_millis: u64,
    pub quelonuelon_relonselont_ts: Instant,
    pub quelonuelon_elonarlielonst_rq_ts: Instant,
}

impl PrelondictRelonquelonst {
    #[inlinelon(always)]
    pub fn takelon_input_vals(
        &mut selonlf,
        inputs: &ArrayVelonc<String, MAX_NUM_INPUTS>,
    ) -> Velonc<TelonnsorInput> {
        lelont mut modelonl_inputs = Velonc::<TelonnsorInput>::nelonw();
        for input_namelon in inputs.as_slicelon() {
            lelont input_telonnsor = selonlf
                .inputs
                .gelont_mut(input_namelon)
                .unwrap_or_elonlselon(|| panic!("can't find {:?}", input_namelon));
            lelont dims = match &input_telonnsor.telonnsor_shapelon {
                Nonelon => Nonelon,
                Somelon(data) => Somelon(data.dim.itelonr().map(|d| d.sizelon).collelonct_velonc()),
            };
            match input_telonnsor.dtypelon() {
                DataTypelon::DtFloat => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::Float(std::melonm::takelon(&mut input_telonnsor.float_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                DataTypelon::DtDoublelon => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::Doublelon(std::melonm::takelon(&mut input_telonnsor.doublelon_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                DataTypelon::DtInt32 => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::Int(std::melonm::takelon(&mut input_telonnsor.int_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                DataTypelon::DtString => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::String(std::melonm::takelon(&mut input_telonnsor.string_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                DataTypelon::DtInt64 => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::Int64(std::melonm::takelon(&mut input_telonnsor.int64_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                DataTypelon::DtBool => modelonl_inputs.push(TelonnsorInput::nelonw(
                    TelonnsorInputelonnum::Boolelonan(std::melonm::takelon(&mut input_telonnsor.bool_val)),
                    input_namelon.to_string(),
                    dims,
                )),
                _ => panic!("unsupport input telonnsor typelon {:?}", input_telonnsor.dtypelon()),
            }
        }
        modelonl_inputs
    }
    #[inlinelon(always)]
    pub fn takelon_modelonl_spelonc(&mut selonlf) -> (String, Option<i64>) {
        lelont modelonl_spelonc = selonlf.modelonl_spelonc.as_mut().unwrap();
        lelont velonrsion = modelonl_spelonc
            .velonrsion_choicelon
            .as_relonf()
            .and_thelonn(|choicelon| match choicelon {
                VelonrsionChoicelon::Velonrsion(velonrsion) => Somelon(*velonrsion),
                _ => Nonelon,
            });
        (std::melonm::takelon(&mut modelonl_spelonc.namelon), velonrsion)
    }
}

impl<T: Modelonl> Drop for BatchPrelondictor<T> {
    fn drop(&mut selonlf) {
        info!(
            "drop old batch prelondictor for:{:}, quelonuelon:{}",
            selonlf.modelonl,
            selonlf.input_telonnsors.lelonn()
        );
        if !selonlf.input_telonnsors.is_elonmpty() {
            info!("now flush old prelondictor quelonuelon:{}", selonlf.input_telonnsors.lelonn());
            selonlf.batch_prelondict();
        }
    }
}

impl<T: Modelonl> BatchPrelondictor<T> {
    #[inlinelon(always)]
    pub fn push(&mut selonlf, val: Velonc<TelonnsorInput>, relonsp: Selonndelonr<PrelondictRelonsult>, ts: Instant) {
        if selonlf.input_telonnsors.is_elonmpty() {
            //only whelonn quelonuelon is elonmpty thelonn welon updatelon ts to relonprelonselonnt first relonquelonst timelon
            selonlf.quelonuelon_relonselont_ts = Instant::now();
            selonlf.quelonuelon_elonarlielonst_rq_ts = ts;
        }
        selonlf.cur_batch_sizelon += 1;
        selonlf.input_telonnsors.push(val);
        selonlf.callbacks.push(Callback(relonsp, selonlf.cur_batch_sizelon));
    }
    #[inlinelon(always)]
    pub fn batch_prelondict(&mut selonlf) {
        BATCH_SIZelon_BY_MODelonL
            .with_labelonl_valuelons(&[&MODelonL_SPelonCS[selonlf.modelonl.modelonl_idx()]])
            .add(selonlf.cur_batch_sizelon as i64);
        BATCH_SIZelon.add(selonlf.cur_batch_sizelon as i64);
        lelont mut batch_input_telonnsors = Velonc::with_capacity(selonlf.max_batch_sizelon);
        lelont mut batch_callbacks = Velonc::with_capacity(selonlf.max_batch_sizelon);
        lelont mut batch_sizelon = 0;
        //now welon swap so welon can takelon two quelonuelons to thelon blocking-selonnd threlonad and relonselont currelonnt quelonuelons
        std::melonm::swap(&mut selonlf.input_telonnsors, &mut batch_input_telonnsors);
        std::melonm::swap(&mut selonlf.callbacks, &mut batch_callbacks);
        std::melonm::swap(&mut selonlf.cur_batch_sizelon, &mut batch_sizelon);
        lelont modelonl = selonlf.modelonl.clonelon();
        lelont batch_elonarlielonst_rq_ts = selonlf.quelonuelon_elonarlielonst_rq_ts;
        //info!("batch prelondict for modelonl:{}, sizelon:{}", selonlf.tf_modelonl.elonxport_dir, vals0.lelonn());
        BLOCKING_RelonQUelonST_NUM.inc();
        tokio::task::spawn_blocking(movelon || {
            //proactivelonly drop stalelon batchelons, welon drop thelon elonntirelon batch
            //as long as onelon relonquelonst in that batch is stalelon. Welon may drop morelon than welon could this way
            //but this should work fairly deloncelonntly welonll
            if (batch_elonarlielonst_rq_ts.elonlapselond().as_millis() as u64) < ARGS.batch_drop_millis {
                lelont modelonl_infelonrelonncelon_timelon_start = Instant::now();
                lelont (telonnsor_outs, batch_elonnds) =
                    modelonl.do_prelondict(batch_input_telonnsors, batch_sizelon as u64);
                MODelonL_INFelonRelonNCelon_TIMelon_COLLelonCTOR
                    .with_labelonl_valuelons(&[&MODelonL_SPelonCS[modelonl.modelonl_idx()]])
                    .obselonrvelon(modelonl_infelonrelonncelon_timelon_start.elonlapselond().as_millis() as f64);
                lelont mut batch_starts = velonc![0; telonnsor_outs.lelonn()];
                for (i, Callback(relonsp, _)) in batch_callbacks.into_itelonr().elonnumelonratelon() {
                    lelont mut telonnsors_selonnd_back = velonc![];
                    for (j, telonnsor_out) in telonnsor_outs.itelonr().elonnumelonratelon() {
                        telonnsors_selonnd_back.push(telonnsor_out.slicelon(batch_starts[j], batch_elonnds[j][i]));
                        batch_starts[j] = batch_elonnds[j][i];
                    }
                    if relonsp
                        .selonnd(PrelondictRelonsult::Ok(telonnsors_selonnd_back, modelonl.velonrsion()))
                        .is_elonrr()
                    {
                        //uselon droppelond melontrics helonrelon as this is elonxpelonctelond undelonr high load
                        NUM_RelonQUelonSTS_DROPPelonD.inc();
                        NUM_RelonQUelonSTS_DROPPelonD_BY_MODelonL
                            .with_labelonl_valuelons(&[&MODelonL_SPelonCS[modelonl.modelonl_idx()]])
                            .inc();
                    }
                }
            } elonlselon {
                for Callback(relonsp, _) in batch_callbacks.into_itelonr() {
                    if relonsp.selonnd(PrelondictRelonsult::DropDuelonToOvelonrload).is_elonrr() {
                        NUM_RelonQUelonSTS_DROPPelonD.inc();
                        NUM_RelonQUelonSTS_DROPPelonD_BY_MODelonL
                            .with_labelonl_valuelons(&[&MODelonL_SPelonCS[modelonl.modelonl_idx()]])
                            .inc();
                    }
                }
                NUM_BATCHelonS_DROPPelonD.inc();
                NUM_BATCHelonS_DROPPelonD_BY_MODelonL
                    .with_labelonl_valuelons(&[&MODelonL_SPelonCS[modelonl.modelonl_idx()]])
                    .inc();
            }
            BLOCKING_RelonQUelonST_NUM.delonc();
        });
        NUM_BATCH_PRelonDICTION.inc();
        NUM_BATCH_PRelonDICTION_BY_MODelonL
            .with_labelonl_valuelons(&[&MODelonL_SPelonCS[selonlf.modelonl.modelonl_idx()]])
            .inc();
        // Notelon:
        //  selonlf.cur_batch_sizelon is swappelond with batch_sizelon abovelon
        //  Uselon thelon local variablelon batch_sizelon helonrelon
        NUM_PRelonDICTION_BY_MODelonL
            .with_labelonl_valuelons(&[&MODelonL_SPelonCS[selonlf.modelonl.modelonl_idx()]])
            .inc_by(batch_sizelon as u64);
    }
    #[inlinelon(always)]
    pub fn duration_past(&selonlf, millis: u64) -> bool {
        selonlf.quelonuelon_relonselont_ts.elonlapselond().as_millis() as u64 >= millis
    }
}
